desktop/src/main/java/haveno/desktop/haveno.css
/* ... */
.table-view .table-row-cell:selected .table-row-cell:row-selection .table-row-cell:cell-selection .text {
    -fx-fill: -bs-text-color;
}

.table-view .table-row-cell:selected .button .text {
    -fx-fill: -bs-text-color;
}

.table-view .table-row-cell .copy-icon .text,
.table-view .table-row-cell .copy-icon .text:hover {
    -fx-fill: -fx-accent;
}

.table-view .table-row-cell:selected .copy-icon .text {
    -fx-fill: -bs-text-color;
}

.table-view .table-row-cell:selected .copy-icon .text:hover {
    -fx-fill: -bs-text-color;
}

.table-view .table-row-cell:selected .hyperlink .text {
    -fx-fill: -bs-text-color;
    -fx-border-style: none;
    -fx-border-width: 0px;
}

.table-view .table-row-cell .hyperlink .text {
    -fx-fill: -bs-rd-font-dark;
    -fx-border-style: none;
    -fx-border-width: 0px;
}

.table-view .table-row-cell .hyperlink .text:hover,
.table-view .table-row-cell:selected .hyperlink .text:hover {
    -fx-fill: -bs-text-color;
    -fx-border-style: none;
    -fx-border-width: 0px;
}

.table-view .table-row-cell .hyperlink:hover,
.table-view .table-row-cell .hyperlink:visited,
.table-view .table-row-cell .hyperlink:hover:visited {
    -fx-underline: false;
    -fx-border-style: none;
    -fx-border-width: 0px;
}

.table-view .table-row-cell .hyperlink:focused {
    -fx-border-style: none;
    -fx-border-width: 0px;
}

.table-view.large-rows .table-row-cell {
    -fx-cell-size: 47px;
}

.table-view.offer-table {
    -fx-background-radius: 0;
    -fx-border-radius: 0;
}

.table-view.offer-table .column-header.first-column {
    -fx-background-radius: 0;
    -fx-border-radius: 0;
}

.table-view.offer-table .column-header.last-column {
    -fx-background-radius: 0;
    -fx-border-radius: 0;
}

.table-view.offer-table .table-row-cell {
    -fx-background: -fx-accent;
    -fx-background-color: -bs-color-gray-6;
}

.offer-table-top {
    -fx-background-color: -bs-color-background-pane;
    -fx-padding: 15 15 5 15;
    -fx-background-radius: 8 8 0 0;
    -fx-border-radius: 8 8 0 0;
    -fx-border-width: 0 0 0 0;
}

.offer-table-top .label {
    -fx-text-fill: -bs-text-color;
    -fx-font-size: 1.1em;
    -fx-font-weight: bold;
}

.offer-table-top .jfx-button {
    -fx-pref-width: 300px;
    -fx-min-height: 35px;
    -fx-padding: 5 25 5 25;
}

/*******************************************************************************
 *                                                                             *
 * Icons                                                                       *
 *                                                                             *
 ******************************************************************************/

#non-clickable-icon {
    -fx-text-fill: -bs-color-gray-4;
}

.delete-icon {
    -fx-fill: -bs-red;
}

.delete {
    -fx-text-fill: -bs-rd-error-red;
    -fx-fill: -bs-rd-error-red;
}

.delete:hover {
    -fx-text-fill: -bs-text-color;
    -fx-fill: -bs-text-color;
}

.warn-icon {
    -fx-text-fill: -bs-yellow;
    -fx-fill: -bs-yellow;
}

.warn-icon:hover {
    -fx-text-fill: -bs-yellow;
    -fx-fill: -bs-yellow;
}

.error-icon {
    -fx-text-fill: -bs-rd-error-red;
    -fx-fill: -bs-rd-error-red;
}

.error-icon:hover {
    -fx-text-fill: -bs-rd-error-red;
    -fx-fill: -bs-rd-error-red;
}


/*******************************************************************************
 *                                                                             *
 * Images                                                                      *
 *                                                                             *
 ******************************************************************************/
.qr-code {
    -fx-cursor: hand;
}

/*******************************************************************************
 *                                                                             *
 * Textarea                                                                    *
 *                                                                             *
 ******************************************************************************/
.text-area {
    -fx-border-color: -bs-background-gray;
}

.window-text-area {
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-border-radius: 0;
}

.text-area-popup {
    -fx-border-color: -bs-color-background-popup-blur;
}

.text-area-popup .content {
    -fx-background-color: -bs-color-background-popup-blur;
}

.text-area-popup:focused {
    -fx-faint-focus-color: -bs-color-background-popup-blur;
}

.notification-popup-bg .text-area-popup, .peer-info-popup-bg .text-area-popup {
    -fx-border-color: -bs-color-background-popup;
}

.notification-popup-bg .text-area-popup .content, .peer-info-popup-bg .text-area-popup .content{
    -fx-background-color: -bs-color-background-popup;
}

.notification-popup-bg .text-area-popup:focused, .peer-info-popup-bg .text-area-popup:focused {
    -fx-faint-focus-color: -bs-color-background-popup;
}

/*******************************************************************************
 *                                                                             *
 * Tab pane                                                                    *
 *                                                                             *
 ******************************************************************************/
.jfx-tab-pane {
    -fx-padding: 0;
    -jfx-disable-animation: true;
}

.jfx-tab-pane .headers-region .tab .tab-container .tab-close-button {
    -fx-background-color: transparent;
    -fx-pref-width: 20;
    -fx-pref-height: 20;
    -fx-min-width: -fx-pref-width;
    -fx-max-width: -fx-pref-width;
    -fx-min-height: -fx-pref-height;
    -fx-max-height: -fx-pref-height;
}

.jfx-tab-pane .headers-region .tab .tab-container .tab-close-button .jfx-rippler {
    -jfx-rippler-fill: none;
}

.tab:disabled .jfx-rippler {
    -jfx-rippler-fill: none !important;
}
/* ... */

